# Yang-Mills-3D-AI-verification-program

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  program.yaml  pyproject.toml
.github/workflows/: extract.yml
bundles/YM3D_M1A_OH_GROUP_GENERATOR_1/: README.md  manifest.json
bundles/YM3D_M1A_SCHEMA_DISCRIMINATOR_NULL_TEST_1/: README.md  manifest.json
design/: YM3D_CONSTRUCTIVE_RG_DESIGN.docx  YM3D_CONSTRUCTIVE_RG_DESIGN.md  YM3D_CONSTRUCTIVE_RG_DESIGN.tex  references.bib
docs/: pipeline_dag.json  pipeline_dag.mmd
lanes/formal_finite_group_audit/: README.md
lanes/hamiltonian_comparison/: README.md
lanes/numerical_anchor/: README.md
lanes/observable_registry/: README.md
lanes/phi4_benchmark/: README.md
lanes/spde_comparison/: README.md
lanes/u1_benchmark/: README.md
lanes/ym2d_sun_exact_validation/: README.md
ledgers/: README.md
orchestrator/: claim_lint.py  make_manifest.py  run.py  scaffold_gate.py
schemas/: README.md  atom.schema.json  boundary_surface_certificate.schema.json  claim_strength_annotation.schema.json  continuum_limit_policy.schema.json  convergence_criterion.schema.json  defect_support.schema.json  fp_determinant_certificate.schema.json  nonterminal_term.schema.json  numerical_anchor.schema.json  observable_registry.schema.json  orbit.schema.json  pipeline_dag.schema.json  primitive_enclosure_certificate.schema.json  rp_transfer.schema.json  scale_coupling_slab.schema.json  stage_discriminated_row.schema.json  ym2d_exact_validation.schema.json
(+17 files in other folders)
